<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#088A68"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.susheel.androidstorageapplication.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@mipmap/sjsu_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/androiddatastoragesample"
        android:id="@+id/textViewTitle"
        android:layout_alignBottom="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        android:id="@+id/buttonPref"
        android:layout_below="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginTop="93dp"
        android:onClick="goPreference"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqlite"
        android:id="@+id/buttonSql"
        android:layout_alignTop="@+id/buttonPref"
        android:layout_alignRight="@+id/textViewTitle"
        android:layout_alignEnd="@+id/textViewTitle"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        android:onClick="goSqlite"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:id="@+id/buttonClose"
        android:layout_below="@+id/buttonPref"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="144dp"
        android:onClick="finishMain"/>

</RelativeLayout>
